edit_package_json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "homepage": "https://AnasAlkouz1.github.io/I-Find.js_ReactApp",
+  "homepage": "https://AnasAlkouz1.github.io/I-Findjs_ReactApp",
+
  
   "name": "client",
   "version": "0.1.0",
